tests/vendor/valid/trivial/paren_2.c
//expect 253
//tags: trivial, unary
int main() {
    return ~(2);
}