tests/vendor/invalid/syntax/missing_const.c
//tags: trivial
int main() {
    return ~;
}